--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
             <version>2.8.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.31</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.31</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
